25/6/4学了以下内容： 1.前端三剑客的代码分离、给元素设计和注入简单样式 2.对git分区的理解、删除操作的理解、文件各种状态的转换

--- a/learn/1.front-end.md
+++ b/learn/1.front-end.md
@@ -5,11 +5,10 @@
 .浏览器直接渲染以上两个
 .浏览器遇到JS：暂停渲染--下载并执行代码--继续渲染
 
-
 0.窗口也是一个对象（window--顶级对象），可以控制浏览器窗口、框架、历史记录等----（控制浏览器行为）
 1.把一个页面看做一个对象（document），是窗口对象的子对象----（操作页面内容）
 2.每个元素都是对象（element）
-    <p>  <br>  <body>  <h1>等这些就是元素
+    `<p>` 、` <br>`  、`<body>`  、`<h1>`等这些就是元素
 3.每个元素都可以看作是页面对象的属性
     document.getElementById()最容易理解这点
 4.通过JavaScript代码可以动态操作document对象
@@ -21,3 +20,47 @@
     单击、双击、滑动滚轮、聚焦、失焦等
 8.事件也可以是浏览器行为，比如：
     页面加载完成、
+
+
+
+25/6/4
+
+1、学会了css样式的两种注入--id和class
+
+```html
+<--文本框的class属性-->
+<input type="text" id="plan-container" class="custom-input" required>
+```
+
+```css
+<--设计的样式-->
+  .custom-input {
+    width: 180px;
+    height: 30px;
+    padding: 1px; /* 内边距（可选） */
+    box-sizing: border-box; /* 包含内边距和边框 */
+  }
+```
+
+2、学会了将HTML、CSS、JavaScript代码分离，
+
+```html
+<link rel="stylesheet" href="styles.css">
+<script src="autoLoadForm.js" defer></script>
+```
+
+有以下优点
+
+- 代码简洁，易于维护
+- 从开发小功能，再组建成小模块，再组建为大的应用的开发思路
+
+3、学会了修改文本框样式（上面）和设置文字位置
+
+```css
+/*设置了select标签内的option标签的value居中*/    
+.custom-selector {
+    text-align: center;
+    text-align-last: center; 
+  }
+```
+
